# tenacious-chimera-project

./: Dockerfile  Makefile  documentation.md  main.py  pyproject.toml  tenx_feedback_report.md
.github/: copilot-instructions.md
.github/workflows/: main.yml
research/: architecture_strategy.md  mermaid.js  tooling_strategy.md
skills/: README.md
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: test_skills_interface.py  test_trend_fetcher.py
