[project]
name = "project-chimera"
version = "0.1.0"
description = "Autonomous AI Influencer Factory"
authors = [{name = "Chimera Team"}]
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "aioredis>=2.0.0",
    "pytube>=15.0.0",
    "moviepy>=1.0.0",
    "opencv-python>=4.8.0",
    "pydub>=0.25.0",
    "ffmpeg-python>=0.2.0",
    "openai>=1.3.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "openai-whisper>=20231117",
    "faster-whisper>=0.9.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "youtube-transcript-api>=0.6.0",
    "tweepy>=4.14.0",
    "pytiktok>=1.5.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "python-dateutil>=2.8.0",
    "pytz>=2023.0",
    "tzlocal>=5.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "websockets>=12.0",
    "aio-pika>=9.4.0",
    "msgpack>=1.0.0",
    "cryptography>=41.0.0",
    "structlog>=23.0.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.0",
    "types-pytz>=2023.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.23.0",
    "jupyter>=1.0.0",
    "ipython>=8.17.0",
    "ipykernel>=6.27.0",
    "ipdb>=0.13.0",
    "debugpy>=1.8.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "pip-audit>=2.6.0",
    "twine>=4.0.0",
    "build>=1.0.0",
    "setuptools>=68.2.0",
    "wheel>=0.41.0",
    "coverage>=7.3.0",
    "tox>=4.11.0",
    "invoke>=2.2.0",
    "fabric>=3.1.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "responses>=0.24.0",
    "vcrpy>=5.1.0",
    "factory-boy>=3.3.0",
    "faker>=20.1.0",
    "freezegun>=1.2.0",
    "pytest-postgresql>=5.0.0",
    "pytest-redis>=3.0.0",
    "testcontainers>=4.6.0",
    "pytest-httpx>=0.27.0",
    "pytest-aiohttp>=1.0.0",
    "hypothesis>=6.89.0",
    "locust>=2.20.0",
    "pytest-benchmark>=4.0.0",
    "pytest-html>=4.0.0",
    "pytest-sugar>=0.9.0",
]

full = [
    "project-chimera[dev]",
    "project-chimera[test]",
    "sentry-sdk>=1.35.0",
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/your-org/project-chimera"
Repository = "https://github.com/your-org/project-chimera.git"
Issues = "https://github.com/your-org/project-chimera/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "A",  # flake8-builtins
    "UP", # pyupgrade
]
ignore = ["E501"]
extend-exclude = ["__pycache__", ".git", "build", "dist", ".venv"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "sqlalchemy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]