[build-system]
requires = ["hatchling"]
requires-python = ">=3.12"
build-backend = "hatchling.build"

[project]
name = "project-chimera"
version = "0.1.0"
description = "Autonomous Influencer Factory"
dependencies = [
    "pytest>=7.0.0",
    "pydantic>=2.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]